[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/Demo.gd" type="Script" id=1]

[node name="Demo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ReadMe" type="Label" parent="."]
margin_left = 64.0
margin_top = 512.0
margin_right = 576.0
margin_bottom = 576.0
text = "To use this add-on, you must copy \"res://addons/godot-async-helper\" to
your project and activate this add-on. If you need to see of what we are doing
in this demo, please see Demo.gd."

[node name="WaitAll" type="Button" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 152.0
margin_bottom = 40.0
text = "Task.wait_all()"

[node name="WaitAllWithTimeout" type="Button" parent="."]
margin_left = 160.0
margin_top = 16.0
margin_right = 320.0
margin_bottom = 40.0
text = "wait_all() w/ timeout"

[node name="WaitAllWithCancellation" type="Button" parent="."]
margin_left = 328.0
margin_top = 16.0
margin_right = 512.0
margin_bottom = 40.0
text = "wait_all() w/ cancellation"

[node name="WaitAllCancel" type="Button" parent="."]
margin_left = 520.0
margin_top = 16.0
margin_right = 584.0
margin_bottom = 40.0
disabled = true
text = "Cancel"

[node name="WaitAllTimer1" type="CheckBox" parent="."]
margin_left = 16.0
margin_top = 48.0
margin_right = 93.0
margin_bottom = 72.0
disabled = true
text = "Timer 1"

[node name="WaitAllTimer2" type="CheckBox" parent="."]
margin_left = 16.0
margin_top = 80.0
margin_right = 93.0
margin_bottom = 104.0
disabled = true
text = "Timer 2"

[node name="WaitAllTimer3" type="CheckBox" parent="."]
margin_left = 16.0
margin_top = 112.0
margin_right = 93.0
margin_bottom = 136.0
disabled = true
text = "Timer 3"

[node name="WaitAny" type="Button" parent="."]
margin_left = 16.0
margin_top = 152.0
margin_right = 152.0
margin_bottom = 176.0
text = "Task.wait_any()"

[node name="WaitAnyWithTimeout" type="Button" parent="."]
margin_left = 160.0
margin_top = 152.0
margin_right = 320.0
margin_bottom = 176.0
text = "wait_any() w/ timeout"

[node name="WaitAnyWithCancellation" type="Button" parent="."]
margin_left = 328.0
margin_top = 152.0
margin_right = 512.0
margin_bottom = 176.0
text = "wait_any() w/ cancellation"

[node name="WaitAnyCancel" type="Button" parent="."]
margin_left = 520.0
margin_top = 152.0
margin_right = 584.0
margin_bottom = 176.0
disabled = true
text = "Cancel"

[node name="WaitAnyTimer1" type="CheckBox" parent="."]
margin_left = 16.0
margin_top = 184.0
margin_right = 93.0
margin_bottom = 208.0
disabled = true
text = "Timer 1"

[node name="WaitAnyTimer2" type="CheckBox" parent="."]
margin_left = 16.0
margin_top = 216.0
margin_right = 93.0
margin_bottom = 240.0
disabled = true
text = "Timer 2"

[node name="WaitAnyTimer3" type="CheckBox" parent="."]
margin_left = 16.0
margin_top = 248.0
margin_right = 93.0
margin_bottom = 272.0
disabled = true
text = "Timer 3"

[node name="Defer" type="Button" parent="."]
margin_left = 16.0
margin_top = 288.0
margin_right = 320.0
margin_bottom = 312.0
text = "Task.defer()"

[node name="Cancellation" type="Button" parent="."]
margin_left = 16.0
margin_top = 328.0
margin_right = 320.0
margin_bottom = 352.0
text = "Cancellation"

[connection signal="pressed" from="WaitAll" to="." method="_on_WaitAll_pressed"]
[connection signal="pressed" from="WaitAllWithTimeout" to="." method="_on_WaitAllWithTimeout_pressed"]
[connection signal="pressed" from="WaitAllWithCancellation" to="." method="_on_WaitAllWithCancellation_pressed"]
[connection signal="pressed" from="WaitAny" to="." method="_on_WaitAny_pressed"]
[connection signal="pressed" from="WaitAnyWithTimeout" to="." method="_on_WaitAnyWithTimeout_pressed"]
[connection signal="pressed" from="WaitAnyWithCancellation" to="." method="_on_WaitAnyWithCancellation_pressed"]
[connection signal="pressed" from="Defer" to="." method="_on_Defer_pressed"]
[connection signal="pressed" from="Cancellation" to="." method="_on_Cancellation_pressed"]
